<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Narcotic Inventory</string>
    <string name="external_dir">/NarcoticInventory</string>
    <string name="menu">Menu</string>
    <string name="manageTrans">New Transaction</string>
    <string name="error">Mark\nError</string>
    <string name="endofday">Set End of Day\nMed Counts</string>
    <string name="exit">Exit</string>
    <string name="action_settings">Application Settings</string>
    <string name="set_counts">Set Start of Day Med Counts</string>
    <string name="set_finalCounts">Set the End of Day Med Counts</string>
    <string name="addStock">Add Medication Stock</string>
    <string name="remStock">Remove Medication Stock</string>
    <string name="remStockAdminNote">Note: You will be required to enter the Administrator Passsword to save these transactions. Also, these transactions cannot be marked as being in error.</string>
    <string name="remLabel">Reason for removal:</string>
    <string name="expired">Medication Expired</string>
    <string name="recall">Medication Recalled</string>
    <string name="other">Other:</string>
    <string name="genReport">Generate Report</string>
    <string name="printReport">View/Print/EMail a Report</string>
    <string name="deleteReport">Delete Old Report</string>
    <string name="facilityname">Your Facility Name Here</string>
    <string name="facility">Set/Update the Facility Name</string>
    <string name="backgroundimage">Set/Update the Background Image</string>
    <string name="facilityLabel">Enter the facility name:</string>
    <string name="administrator">Set/Update the Facility Administrator</string>
    <string name="adminLabel">Facility Administrator:</string>
    <string name="emailLabel">E-Mail Address:</string>
    <string name="currPass">Current Password:</string>
    <string name="newPass">New Password:</string>
    <string name="vPass">Verify Password:</string>
    <string name="pass">Administrator\'s Password:</string>
    <string name="textsizecolor">Set the Text Size and Color</string>
    <string name="facilityText">Facility Name</string>
    <string name="drugText">Medication Heading</string>
    <string name="transText">Transaction Detail</string>
    <string name="transErrorText">Transaction Error Detail</string>
    <string name="reset">Reset Size</string>
    <string name="advanced">Advanced Options</string>
    <string name="comment">Override Comment:</string>
    <string name="current">Current entries. Click an entry to edit an entry; long click to remove an entry.</string>
    <string name="druglist">Manage the list of Medications</string>
    <string name="drugLabel">Enter the medication name:</string>
    <string name="selectImage">Select Image\nFrom Gallery</string>
    <string name="defaultImage">Set to\nDefault Image</string>
    <string name="clearImage">No Background\nImage</string>
    <string name="setAlpha">Set the transparancy of the image</string>
    <string name="rtn">Return</string>
    <string name="replace">Replace</string>
    <string name="saveConfig">Save this entry</string>
    <string name="patNeed">Patient Required</string>
    <string name="qty">Quantity:</string>
    <string name="transactLabel">Transaction Action:</string>
    <string name="verifyQty">Verify Quantity:</string>
    <string name="addStockQty">Quantity of Stock Added:</string>
    <string name="remStockQty">Quantity of Stock Removed:</string>
    <string name="nurseprompt">RN removing med:</string>
    <string name="nurseWitness">Witnessed by RN:</string>
    <string name="crnaprompt">CRNA responsible:</string>
    <string name="patientprompt">Patient receiving med:</string>
    <string name="wasteprompt">Amount Wasted:</string>
    <string name="wastereason">Reason for waste:</string>
    <string name="patient">Patient:</string>
    <string name="orrmprompt">OR Room:</string>
    <string name="drprompt">CRNA/Doctor:</string>
    <string name="remove">Remove</string>
    <string name="waste">Waste</string>
    <string name="transactions">Transaction List</string>
    <string name="nursesReview">Nurses confirming counts:</string>
    <string name="nurseWaste">Nurses confirming waste:</string>
    <string name="verifyCounts">Verify\nDrug Counts</string>
    <string name="setToFinal">Set Counts to\nYesterday\'s Final</string>
    <string name="setToCurrent">Set Counts to\nCurrent Value</string>
    <string name="editItemLabel">Edit or Delete this Entry</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="override">Override</string>
    <string name="cont">Continue</string>
    <string name="cleardata">Clear Data</string>
    <string name="backupdata">Backup Data</string>
    <string name="restoredata">Restore Data</string>
    <string name="printRpt">Print Report</string>
    <string name="emailRpt">EMail Report</string>
    <string name="about">About</string>
    <string name="errorDialog">Do you want to mark this transaction as being in error and replace it with a new transaction?</string>
    <string name="printList">This is a list of available reports.\n\nSelect the report you would like to view or print or email.</string>
    <string name="deleteList">This is a list of old reports.\n\nSelect the report you would like to delete.\n\nNote: there is no undo for this operation.</string>
    <string name="backupList">This is a list of available backup files.\n\nSelect the one that you would like to use for the restore.</string>
    <string name="adminOver">Override the final count</string>
    <string name="overMsg">You can override the discrepency between the transaction count and the observed count by having the Administrator enter their password.</string>
    <string name="pickDrug">To enter a transaction, select a medication from the list on the left.</string>
    <string name="settings_bg_color_dialog">Pick a Color</string>
    <string name="settings_default_color_confirm">Set to Default Color</string>
    <string name="settings_bg_color_confirm">Set to This Color</string>
    <string name="suppMessage">Thank you for installing and using this app. If you have any questions or comments, you may contact the developer via email or visit the web site.</string>
    <string name="emailAddr">support@vinginmedina.com</string>
    <string name="webpage">http://www.vinginmedina.com/narcotic-menu</string>

</resources>
