<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:text="@string/adminOver"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:textSize="25sp" />
    
    <TextView android:text="@string/overMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="20sp" />
        <EditText
	        android:id="@+id/adminPass"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textPassword"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/comment"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textNoSuggestions"
		    android:imeOptions="actionDone"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
	    <Button android:id="@+id/override"
	        android:text="@string/override"
	        android:background="@drawable/button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <Button android:id="@+id/cancel"
            android:text="@string/cancel"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	</LinearLayout>
    

</LinearLayout>
