<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/settingsLabel"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/backgroundimage"
        android:textSize="40sp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/selectImage"
            android:text="@string/selectImage"
            android:background="@drawable/button"
            android:onClick="settingsSelectImage"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/defaultImage"
            android:text="@string/defaultImage"
            android:background="@drawable/button"
            android:onClick="settingsSelectImage"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/clearImage"
            android:text="@string/clearImage"
            android:background="@drawable/button"
            android:onClick="settingsSelectImage"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	    <Button android:id="@+id/saveConfig"
            android:text="@string/saveConfig"
            android:background="@drawable/button"
            android:onClick="settingsSelectImage"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	</LinearLayout>
	
    <TextView
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setAlpha"
        android:textSize="30sp" />
	
    <SeekBar android:id="@+id/seekAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:max="100"/>
    
    <ImageView android:id="@+id/viewImage"
  		android:layout_width="match_parent"
  		android:layout_height="0dp"
  		android:layout_weight="1" />

</LinearLayout>
