<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/settingsLabel"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/druglist"
        android:textSize="40sp" />
    
    <View android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="@android:color/black" />
    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drugLabel"
            android:textSize="20sp" />
        <EditText
	        android:id="@+id/drugEntry"
	        android:singleLine="true"
	        android:inputType="textNoSuggestions"
	        android:imeOptions="actionDone"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp" />
    </LinearLayout>
    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"
		    android:text="@string/patNeed" />
        <CheckBox 
            android:id="@+id/patNeed"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <Button android:id="@+id/saveListItem"
            android:text="@string/saveConfig"
            android:background="@drawable/button"
            android:onClick="settingsOnClickDrug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    <View android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="@android:color/black"/>
    
    <TextView android:text="@string/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>
    
    <ListView android:id="@+id/settingList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp" />

</LinearLayout>
