<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/settingsLabel"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/administrator"
        android:textSize="40sp" />
    
    <View android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="@android:color/black" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adminLabel"
            android:textSize="20sp" />
        <EditText
	        android:id="@+id/adminName"
	        android:singleLine="true"
	        android:inputType="textNoSuggestions"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailLabel"
            android:textSize="20sp" />
        <EditText
	        android:id="@+id/emailAddr"
	        android:singleLine="true"
	        android:inputType="textEmailAddress"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/currPass"
            android:nextFocusDown="@+id/newPass"
            android:singleLine="true"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newPass"
            android:nextFocusDown="@+id/vPass"
            android:singleLine="true"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vPass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/vPass"
            android:layout_width="0dip"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:imeOptions="actionDone" />

    </LinearLayout>
    
    <Button android:id="@+id/saveConfig"
            android:text="@string/saveConfig"
            android:background="@drawable/button"
            android:onClick="settingsOnClickAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>
