<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
	        android:id="@+id/editItem"
	        android:singleLine="true"
	        android:inputType="textNoSuggestions"
	        android:imeOptions="actionDone"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"
		    android:text="@string/patNeed" />
        <CheckBox 
            android:id="@+id/patNeed"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <Button android:id="@+id/save"
            android:text="@string/save"
            android:background="@drawable/button"
            android:onClick="drugCountOnClick"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/delete"
            android:text="@string/delete"
            android:background="@drawable/button"
            android:onClick="drugCountOnClick"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/cancel"
            android:text="@string/cancel"
            android:background="@drawable/button"
            android:onClick="drugCountOnClick"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
