<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/settingsLabel"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/facility"
        android:textSize="40sp" />
    
    <View android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="@android:color/black" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facilityLabel"
            android:textSize="20sp" />
        <EditText
	        android:id="@+id/facility"
	        android:singleLine="true"
	        android:imeOptions="actionDone"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp" />
    </LinearLayout>
    
    <Button android:id="@+id/saveConfig"
            android:text="@string/saveConfig"
            android:background="@drawable/button"
            android:onClick="settingsOnClickFacility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>
